--- a/九宫格改.html
+++ b/九宫格改.html
@@ -13,31 +13,39 @@
 		html,body{
 			width: 100%
 		}
-		.box1{
+		.classfix{
 			width: 56.22%;
 			margin: 0 auto;
-			overflow: hidden;
+			
 		}
-		.one{	
+		.classfix:after{
+			content: ".";
+			display: block;
+			height: 0;
+			clear: both;
+			visibility: hidden;
+		}
+		.clssfix{zomm:1;}
+		div div{	
 			width: 32%;
-			padding: 16% 0;
-			border:1px solid #000;
+			padding: 16% 0%;	
 			margin: 0.3%;
 			background-color: yellow;
 			border-radius: 5%;
 			float: left;
 		}
+
 	</style>
 </head>
 <body>
-	<div class="box1">
+	<div class="classfix">
 		<div class="one"></div>
 		<div class="one"></div>
 		<div class="one"></div>
+		<div class="two"></div>
 		<div class="one"></div>
 		<div class="one"></div>
-		<div class="one"></div>
-		<div class="one"></div>
+		<div class="two"></div>
 		<div class="one"></div>
 		<div class="one"></div>
 	</div>
