九宫格终极完成版
就像该论文，不过总之是完成了。

--- a/九宫格改.html
+++ b/九宫格改.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
+	<meta charset="UTF-8" >
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 	<title>Document</title>
 	<script type="text/javascript">
 	</script>
@@ -26,7 +27,7 @@
 			visibility: hidden;
 		}
 		.clssfix{zomm:1;}
-		div div{	
+		div .smallbox{
 			width: 32%;
 			padding: 16% 0%;	
 			margin: 0.3%;
@@ -39,15 +40,16 @@
 </head>
 <body>
 	<div class="classfix">
-		<div class="one"></div>
-		<div class="one"></div>
-		<div class="one"></div>
-		<div class="two"></div>
-		<div class="one"></div>
-		<div class="one"></div>
-		<div class="two"></div>
-		<div class="one"></div>
-		<div class="one"></div>
+		<div class="smallbox"></div>
+		<div class="smallbox"></div>
+		<div class="smallbox"></div>
+		<div class="smallbox"></div>
+		<div class="smallbox"></div>
+		<div class="smallbox"></div>
+		<div class="smallbox"></div>
+		<div class="smallbox"></div>
+		<div class="smallbox"></div>
+		
 	</div>
 	
 	</body>
