--- a/3.html
+++ b/3.html
@@ -3,40 +3,18 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<script type="text/javascript">
-	</script>
-	<style type="text/css" media="screen">
-		.box{
-			background-color: #d8d8d8;
-			border: 1px solid #000;
-		}
-		div div{
-			background-color: yellow;
-			border: 1px solid #000;
-			margin: 20px;
-			height: 100px;
-		}
-		.one{
-			float: left;
-			border:none;
-			height: 500px;
-			width: 100%;
-		}
-		.two{
-			
-		}
-		div span{
-			border:1px solid #fff;
-			margin: 20px;
-		}
-	</style>
 </head>
 <body>
-	<div class="box">
-		<div class="one">div1</div>
-		<div class="two">div2</div>
-		<span>>这是一sdfffffffffffffsdaaaaaaaaaadsgggggggggggggggggggggggggggggggggggggggggggggggggggggggggaaaaaaaaaf段文字</span>
+	<div>
+		<div class="one"></div>
+		<div class="one"></div>
+		<div class="one"></div>
+		<div class="one"></div>
+		<div class="one"></div>
+		<div class="one"></div>
+		<div class="one"></div>
+		<div class="one"></div>
+		<div class="one"></div>
 	</div>
-	
-	</body>
+</body>
 </html>
