--- a/3.html
+++ b/3.html
@@ -3,9 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<style type="text/css">
+		
+	</style>
 </head>
 <body>
-	<div>
+	<div class="bigbox">
 		<div class="one"></div>
 		<div class="one"></div>
 		<div class="one"></div>
