--- a/九宫格改.html
+++ b/九宫格改.html
@@ -26,7 +26,7 @@
 			clear: both;
 			visibility: hidden;
 		}
-		.clssfix{zomm:1;}
+		.clssfix{zoom:1;}
 		div .smallbox{
 			width: 32%;
 			padding: 16% 0%;	
