--- a/task3.html
+++ b/task3.html
@@ -4,49 +4,105 @@
 	<meta charset="UTF-8">
 	<title>魔镜</title>
 	<style type="text/css">
+		html{
+			font-size: 62.5%;
+		}
 		body{
 			background-color: #6CCDD5;
+			font-size: 1.2rem;
 		}
-		header{
-			text-align: center;
+		.first{
+			float: left;
+			margin-left: 1%;
+			width: 5%;
+			overflow: hidden;
+		}
+		.first img{
+			width: 100%;
+		}
+		.header{
+			margin-left: 25%;
 			color: #fff;
+
+		}
+		.second{
+			float: left;
+			width: 7%;
+			overflow: hidden;
+			margin-left: 20%;
+			padding: 1%;
+		}
+		.second img{
+			width: 100%;
+			height: 
+		}
+		h1{
+			font-size: 5rem;
+			font-family: "Adobe 黑体 Std";
+			margin-bottom: 0;
+		}
+		.header h4{
+			font-size: 1.7rem;
+			margin-top: 0;
+			color:#fff;
+			font-family: "Adobe 黑体 Std";
+		}
+		.article{
+			
+			font-size: 1.5rem;
+			color: #fff;
+			/*text-align: center;*/
+
+		}
+		.o{
+			font-family: "Hiragino Sans GB";
+			padding: 1% 0;
+			text-align: center;
 		}
 		
-		header a{
-			color:#fff;
-			text-decoration: none;
-		}
-		article{
-			margin: 5% 23%;
-			font-size: 3em;
-			color: #fff;
-			line-height: 2em;
-		}
+	
+		
 		.leftphoto{
 			float: left;
+			font-family: "Adobe 黑体 Std";
+			color:#fff;
 		}
 		.rightphoto{
-			float:right;
+			float: right;
+			font-family: "Adobe 黑体 Std";
+			color:#fff;
 		}
 	</style>
 </head>
 <body>
 	<div>
-		<header id="header" class="header">
+		<span class="first"><img src="C:\Users\Administrator\Desktop\学习截图\2.png"></span>
+		<div id="header" class="header">
+			<span class="second"><img src="C:\Users\Administrator\Desktop\学习截图\3.png"></span>
 			<h1>葡萄藤</h1>
-			<a href="http://www.ppteng.com" title="葡萄藤官网">www.ppteng.com</a>
-		</header>
-		<article>
-			葡萄藤轻游戏专注于桌游领域，提供在线杀人游戏，捉鬼，炸狼堡等多种聚会游戏，以下线下聚会桌游道具。
-		</article>
-		<footer>
-			<div class="leftphoto">
-			290560933	
+			<h4>www.ppteng.com</h4>
+		</div>
+		<div class="article">
+			<div class="o">葡萄藤轻游戏专注于桌游领域，提</div>
+			<div class="o">供在线杀人游戏，捉鬼，炸狼堡等</div>
+			<div class="o">多种聚会游戏，以下线下聚会桌游</div>
+			<div class="o">道具.<div>
+		</div>
+		<div class="footer">
+		<div class="leftphoto"><span class="third">
+			<img src="C:\Users\Administrator\Desktop\学习截图\1.png">
+		</span>
+			
+			<span>290560933</span>	
 			</div>
 			<div class="rightphoto">
-					BJTTeng
+			<span class="four">
+			<img src="C:\Users\Administrator\Desktop\学习截图\4.png">
+		</span>
+			
+			<span>BJTTeng</span>
 			</div>
-		</footer>
+		</div>
 	</div>
 </body>
 </html>
