--- a/task3.html
+++ b/task3.html
@@ -59,13 +59,15 @@
 			font-family: "Adobe 黑体 Std";
 		}
 		.article {
-			padding-top:11.1%;
+			
 			font-family: "Hiragino Sans GB";
 			color: #fff;
 		}
-		.article p{
+		.article .one{
 			text-align: left;
-			padding-left: 14.1%;
+		}
+		.article p{
+			padding-left: 25%;
 			font-size: 3vw;
 		}
 
@@ -114,7 +116,7 @@
 			</div>
 		</div>
 		</div>
-		<div class="article">
+		<div class="article"><div class="one">
 		<p>葡萄藤轻游戏专注于桌游领域，提</p>
 		<p>供在线杀人游戏，捉鬼，炸狼堡等</p>
 		<P>多种聚会游戏，以下线下聚会桌游</P>
