--- a/task4.html
+++ b/task4.html
@@ -2,11 +2,29 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<title>登录页</title>
 		<style type="text/css">
+			
+			@media only screen and (min-width: 320px) and (max-width: 767px) {
+				html{
+				font-size: 62.5%;
+				}
+			}
+			@media only screen and (min-width: 768px) and (max-width: 1024px) {
+				html{
+					font-size: 100%;
+				}
+			}
+			@media only screen and (min-width: 1025px) {
+				html{
+					font-size: 150%;
+				}
+			}
 			body{
 				margin: 0;
 				padding: 0;
+				width: 100%;
 				background-color: #EEF0F4;
 			}
 			.header{
@@ -19,15 +37,21 @@
 				width: 15%;
 				text-align: center;
 				line-height: 100px;
-				font-size: 32px;
+				font-size: 2rem;
+			}
+			.left-header a{
+				color: #fff;
+				text-decoration: none;
+				margin-left: 5%;
 			}
 			.middle-header{
 				position: absolute;
 				left: 15%;
 				width: 70%;
 				text-align: center;
-				line-height: 100px;
-				font-size: 32px;
+				line-height:100px;
+				font-size: 2rem;
+				color: #fff;
 			}
 			.right-header{
 				position: absolute;
@@ -35,33 +59,33 @@
 				width: 15%;
 				text-align: center;
 				line-height: 100px;
-				font-size:32px;
+				font-size:2rem;
 			}
-			.header a{
+			.right-header a{
 				color: #fff;
 				text-decoration: none;
+				margin-right: 5%;
 			}
+			
 			form p{
 				height: 100px;
 				background-color: #fff;
-
 			}
 			form p img{
 				position: relative;
 				top:30px;
-				margin: 0 42px;
+				margin: 0 5%;
 			}
 			form p .phone-number,.password{
 				height: 50px;
 				width: 70%;
 				position: relative;
 				top:18px;
-				font-size: 28px;
+				font-size: 1.5rem;
 				padding-left: 32px;
 				border-top-width:0px;
 				border-bottom-width:0px;
 				border-right-width:0px;
-				
 				outline: none;
 			}
 			form .bgc-button{
@@ -69,16 +93,16 @@
 				text-align: center;
 			}
 			form .bgc-button .button{
-				font-size: 32px;
+				font-size: 2rem;
 				color: #fff;
+				width: 100%;
+				height: 100%;
 				background-color: #6CCDD5;
 				border: none;
-				position: relative;
-				top: 29px;
 				/*outline: none;*/
 			}
 			.footer a{
-				font-size: 28px;
+				font-size: 1.5rem;
 				color: #6CCDD5;
 				text-decoration: none;
 				float: right;
@@ -89,12 +113,12 @@
 	<body>
 		<div class="header">
 			<div class="left-header"><a href="" />关闭</a></div>
-			<div class="middle-header"><a href="" />登陆</a></div>
+			<div class="middle-header">登陆</div>
 			<div class="right-header"><a href="" />注册</a></div>
 		</div>
 		<div class="form">
 			<form>
-				<P><img src="photo\task4-1.png"><input class="phone-number" type="text" name="" placeholder="请输入手机号" />
+				<P><img src="photo\task4-1.png"><input class="phone-number" type="text" name="" placeholder="请输入手机号" onkeyup="this.value=this.value.replace(/\D/g,'')" onafterpaste="this.value=this.value.replace(/\D/g,'')" maxlength="11" />
 				</P>
 				<P><img src="photo\task4-2.png"><input class="password" type="password" name="" placeholder="请输入密码" />
 				</P>
