--- a/task4.html
+++ b/task4.html
@@ -6,19 +6,23 @@
 		<title>登录页</title>
 		<style type="text/css">
 			
-			@media only screen and (min-width: 320px) and (max-width: 767px) {
+			@media only screen and (min-width: 320px) and (max-width: 480px) {
 				html{
 				font-size: 62.5%;
+				}
+			}@media only screen and (min-width: 481px) and (max-width:767px) {
+				html{
+					font-size: 150%;
 				}
 			}
 			@media only screen and (min-width: 768px) and (max-width: 1024px) {
 				html{
-					font-size: 100%;
+					font-size: 180%;
 				}
 			}
 			@media only screen and (min-width: 1025px) {
 				html{
-					font-size: 150%;
+					font-size: 200%;
 				}
 			}
 			body{
@@ -29,14 +33,14 @@
 			}
 			.header{
 				background-color:#6CCDD5;
-				height: 100px;
+				height: 5rem;
 				position: relative;
 			}
 			.left-header{
 				position: absolute;
-				width: 15%;
+				width: 30%;
 				text-align: center;
-				line-height: 100px;
+				line-height: 5rem;
 				font-size: 2rem;
 			}
 			.left-header a{
@@ -46,19 +50,19 @@
 			}
 			.middle-header{
 				position: absolute;
-				left: 15%;
-				width: 70%;
+				left: 30%;
+				width: 40%;
 				text-align: center;
-				line-height:100px;
-				font-size: 2rem;
+				line-height:5rem;
+				font-size: 2.2rem;
 				color: #fff;
 			}
 			.right-header{
 				position: absolute;
-				left: 85%;
-				width: 15%;
+				left: 70%;
+				width: 30%;
 				text-align: center;
-				line-height: 100px;
+				line-height: 5rem;
 				font-size:2rem;
 			}
 			.right-header a{
@@ -68,21 +72,25 @@
 			}
 			
 			form p{
-				height: 100px;
+				
 				background-color: #fff;
 			}
 			form p img{
+				max-width: 100%;
 				position: relative;
-				top:30px;
-				margin: 0 5%;
+				top:-0.25rem;
+			/*	top: 1rem;*/
+				vertical-align: middle;
+				margin: 0 1.8rem;
 			}
+		
 			form p .phone-number,.password{
-				height: 50px;
-				width: 70%;
+				margin: 1.5rem 0;
+				height:3rem ;
+				width: 60%;
 				position: relative;
-				top:18px;
-				font-size: 1.5rem;
-				padding-left: 32px;
+				font-size: 2rem;
+				padding-left: 2rem;
 				border-top-width:0px;
 				border-bottom-width:0px;
 				border-right-width:0px;
@@ -93,16 +101,16 @@
 				text-align: center;
 			}
 			form .bgc-button .button{
-				font-size: 2rem;
+				height: 5rem;
+				font-size: 2.2rem;
 				color: #fff;
 				width: 100%;
-				height: 100%;
 				background-color: #6CCDD5;
 				border: none;
 				/*outline: none;*/
 			}
 			.footer a{
-				font-size: 1.5rem;
+				font-size: 2rem;
 				color: #6CCDD5;
 				text-decoration: none;
 				float: right;
