--- a/task5.html
+++ b/task5.html
@@ -7,7 +7,7 @@
 	<style type="text/css">
 		@media only screen and (min-width: 320px) and (max-width: 480px) {
 				html{
-				font-size: 80%;
+				font-size: 70%;
 				}
 		    }
 		@media only screen and (min-width: 481px) and (max-width:767px) {
@@ -32,7 +32,7 @@
 		.top-logo-header{
 		 position: fixed;
 	     z-index: 1;
-		 margin:1rem 0 0 1rem;
+		 margin:2% 0 0 2%;
 		}
 		.top-text-header{
 		 color: #fff;
@@ -43,13 +43,14 @@
 		text-align: center;
 		}
 		.content{
-
+			
 			padding-top: 3.4rem;
 			padding-bottom: 6rem;
 			overflow-y: scroll;
 			-webkit-overflow-scrolling:touch;
 		}
 		.content .top-content{
+			width: 100%;
 			height: 10rem;
 			background-image: url(photo/task5-2.png);
 			background-repeat: no-repeat;
@@ -99,12 +100,18 @@
 		.introduce-list .text-color{
 			color: #999999;
 		}
-		.introduce-list .work-length,.star,.work-serve{
+		.introduce-list .work-length,.star{
 			margin-left: 1rem;
 		}
 		.introduce-list .work-price{
 			color: red;
 			margin-left: 1rem;
+		}
+		.introduce-list .work-serve{
+			margin-left: 1rem;
+			display: inline-block;
+			width: 50%;
+			vertical-align: top;
 		}
 		.footer{
 			width: 100%;
@@ -115,7 +122,6 @@
 			background-color: #fff;
 		}
 		.footer .left-footer{
-			
 			border: 1px solid #5fc0cd;
 			border-radius: 0.4rem;
 			width: 40%;
