--- a/task7.html
+++ b/task7.html
@@ -67,6 +67,7 @@
 			margin-right:0.17rem;
 			vertical-align: middle;
 			border: 1px solid #d0d0d0;
+			position: relative;
 			background-color: #ffffff;
 		}
 		.main .list-group .first-list{
@@ -98,16 +99,19 @@
 
 		.main .list-group .button-3{
 			position: absolute;
-			right: -0.27rem;	
-			
+			right: 0rem;
+			top:1.66rem;	
+			/*float: right;*/
+			/*margin-top:-0.68rem;*/
 			z-index: 1;
+			
 			width:0.27rem;
 			height: 0.68rem;
 			padding: 0;
 			margin: 0;
 			vertical-align: middle;
 			line-height: 0.68rem;
-			background-color: #ffffff;
+			background-color: red;
 			border:0;
 		}
 		.main .list-group .button-3 span{
@@ -115,11 +119,16 @@
 			font-size: 0.24rem;
 			color:#fbb435;
 		}
-		.main .list-group .tird-list{
+		.main .list-group .third-list{
 			color: #9a9a9a;
 			text-align: center;
 			border: 0;
+			padding: 0;
+			vertical-align: middle;
+			line-height: 0.38rem;
 			background-color: #ffffff;
+			margin: 0 0.27rem;
+			height: 0.38rem;
 			font-size: 0.14rem;
 		}
 		.main .list-group .list-footer{
@@ -160,15 +169,15 @@
 		<div class="list-group">
 		<div class="list-group-item first-list">捉鬼游戏</div>
 	    <a href="##" class="list-group-item second-list">简化版</a>
-	    <div class="list-group-item tird-list">有1133个用户正在玩此款游戏</div>
+	    <div class="list-group-item third-list">有1133个用户正在玩此款游戏</div>
 					   
-	    <a href="##" class="list-group-item second-list">猜词版 
+	    <a href="##" class="list-group-item second-list">猜词版  </a>
 	    <button type="button" class="button-3">
 	  		<span class="glyphicon glyphicon-play" aria-hidden="true"></span>
-		</button> </a>
-	    <div class="list-group-item tird-list">有1133个用户正在玩此款游戏</div>
+		</button>
+	    <div class="list-group-item third-list">有1133个用户正在玩此款游戏</div>
 		<a href="##" class="list-group-item second-list">白痴版</a>
-		<div class="list-group-item tird-list">有1133个用户正在玩此款游戏</div>
+		<div class="list-group-item third-list">有1133个用户正在玩此款游戏</div>
 		<div class="list-group-item  list-footer">
 			<div class="round-footer-1"></div>
 			<div class="round-footer-2"></div>
