--- a/task7.html
+++ b/task7.html
@@ -105,71 +105,34 @@
 			/*margin-top:-0.68rem;*/
 			z-index: 1;
 			
-			width:0.27rem;
-			height: 0.68rem;
-			padding: 0;
-			margin: 0;
-			vertical-align: middle;
-			line-height: 0.68rem;
-			background-color: red;
-			border:0;
-		}
-		.main .list-group .button-3 span{
-		/*	height: 150%;*/
-			font-size: 0.24rem;
-			color:#fbb435;
-		}
-		.main .list-group .third-list{
-			color: #9a9a9a;
-			text-align: center;
-			border: 0;
-			padding: 0;
-			vertical-align: middle;
-			line-height: 0.38rem;
-			background-color: #ffffff;
-			margin: 0 0.27rem;
-			height: 0.38rem;
-			font-size: 0.14rem;
-		}
-		.main .list-group .list-footer{
-			border:0;
-			padding: 0;
-			width: 100%;
-			text-align: center;
-		}
-		.main .list-group  .list-footer .round-footer-1{
-			display: inline-block;
-			width: 0.1rem;
-			height: 0.1rem;
-			margin:0px 0.01rem;	
-			border-radius: 0.045rem;
-			background-color: #69d1e1;
-		}
-		.main .list-group  .list-footer .round-footer-2,.round-footer-3,.round-footer-4{
-			display: inline-block;
-			width: 0.1rem;
-			height: 0.1rem;
-			margin:0px 0.01rem;	
-			border-radius: 0.045rem;
-			background-color: #f0f0f0;
-		}
-	</style>
-</head>
-<body>
-	<div class="header">
-		<button class="btn "><img src="photo/task7-1.png"></button>
-	</div>
-	<div class="main">
-		<div class="top-content ">
-			<span class="top-content-text">上次游戏:&nbsp;&nbsp;&nbsp;捉鬼猜词版</span>
-			<button type="button" class="button " >
-     		 <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
-    		</button>
-		</div>
-		<div class="list-group">
-		<div class="list-group-item first-list">捉鬼游戏</div>
-	    <a href="##" class="list-group-item second-list">简化版</a>
-	    <div class="list-group-item third-list">有1133个用户正在玩此款游戏</div>
+            width:0.27rem;             height: 0.68rem;             padding:
+0;             margin: 0;             vertical-align: middle;
+line-height: 0.68rem;             background-color: red;             border:0;
+}         .main .list-group .button-3 span{         /*  height: 150%;*/
+font-size: 0.24rem;             color:#fbb435;         }         .main .list-
+group .third-list{             color: #9a9a9a;             text-align: center;
+border: 0;             padding: 0;             vertical-align: middle;
+line-height: 0.38rem;             background-color: #ffffff;
+margin: 0 0.27rem;             height: 0.38rem;             font-size:
+0.14rem;         }         .main .list-group .list-footer{
+border:0;             padding: 0;             width: 100%;             text-
+align: center;         }         .main .list-group  .list-footer .round-
+footer-1{             display: inline-block;             width: 0.1rem;
+height: 0.1rem;             margin:0px 0.01rem;              border-radius:
+0.045rem;             background-color: #69d1e1;         }         .main
+.list-group  .list-footer .round-footer-2,.round-footer-3,.round-footer-4{
+display: inline-block;             width: 0.1rem;             height: 0.1rem;
+margin:0px 0.01rem;              border-radius: 0.045rem;
+background-color: #f0f0f0;         }     </style> </head> <body>     <div
+class="header">         <button class="btn "><img
+src="photo/task7-1.png"></button>     </div>     <div class="main">
+<div class="top-content ">             <span class="top-content-
+text">上次游戏:&nbsp;&nbsp;&nbsp;捉鬼猜词版</span>             <button type="button"
+class="button " >              <span class="glyphicon glyphicon-menu-right"
+aria-hidden="true"></span>             </button>         </div>         <div
+class="list-group">         <div class="list-group-item first-list">捉鬼游戏</div>
+<a href="##" class="list-group-item second-list">简化版</a>         <div class
+="list-group-item third-list">有1133个用户正在玩此款游戏</div>
 					   
 	    <a href="##" class="list-group-item second-list">猜词版  </a>
 	    <button type="button" class="button-3">
