--- a/测试.html
+++ b/测试.html
@@ -1,28 +1,18 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>RunJS</title>
-        <style type="text/css">
-          body{background:#fff;}
-            .one{
-              width: 500px;
-              height: 300px;
-              box-shadow: 10px 0 5px -5px red;
-                       
-              border: 3px dashed black;
-            }
-            .two{
-              width: 500px;
-              height: 300px;
-              box-shadow: 50px 100px 0 30px  red;
-            }
-        </style>
-    </head>
-    <body>
-
-      <div class="one"></div>
-      <div class="two"></div>
-
-    </body>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>无标题文档</title>
+<style type="text/css">
+*{ margin:0; padding:0;}
+.nav{ width:800px; height:30px; line-height:30px; background:#FC9; margin:0 auto; text-align:center;}
+.nav a{ display:block; width:100px; float:left; color:#000; text-decoration:none;}
+.nav a:hover{ color:red; text-decoration:underline; background:#369; }
+</style>
+</head>
+<body>
+<div class="nav">
+<a href="#">体育</a><a href="#">科学</a><a href="#">教育</a><a href="#">娱乐</a><a href="#">体育</a><a href="#">科学</a><a href="#">教育</a><a href="#">娱乐</a>
+</div>
+</body>
 </html>
