--- a/测试.html
+++ b/测试.html
@@ -1,18 +1,223 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>无标题文档</title>
-<style type="text/css">
-*{ margin:0; padding:0;}
-.nav{ width:800px; height:30px; line-height:30px; background:#FC9; margin:0 auto; text-align:center;}
-.nav a{ display:block; width:100px; float:left; color:#000; text-decoration:none;}
-.nav a:hover{ color:red; text-decoration:underline; background:#369; }
-</style>
+  <meta charset="UTF-8">
+  <title>Document</title>
+  <style type="text/css">
+  .contianer{
+    position: absolute;
+    width: 100%;
+    height: 1000px;background-color: #888;
+  }
+    .one1{
+      width: 300px;
+      height: 300px;
+     border:1px solid red;
+     margin-top: 300px;
+
+    }
+    .one1>div{
+      display: inline-block;
+      width: 100PX;
+       height: 100px;
+      background-color: #d8d8d8;
+      margin-bottom: -4px;
+      -webkit-animation-name: doonghua;
+      -webkit-animation-duration:1s;
+      animation-iteration-count: infinite;
+      background-color: #209087;
+    }
+    .one1 >.y1{
+      -webkit-animation-delay: -0.9s;
+    }
+      .one1 >.y2{
+      -webkit-animation-delay: -0.8s;
+    }
+      .one1 >.y3{
+      -webkit-animation-delay: -0.7s;
+    }
+      .one1 >.y4{
+      -webkit-animation-delay: -0.6s;
+    }
+      .one1 >.y5{
+      -webkit-animation-delay: -0.5s;
+    }
+      .one1 >.y6{
+    -webkit-animation-delay: -0.4s;
+    }
+      .one1 >.y7{
+      -webkit-animation-delay: -0.3s;
+    }
+      .one1 >.y8{
+      -webkit-animation-delay: -0.2s;
+    }
+      .one1 >.y9{
+      -webkit-animation-delay: -0.1s;
+    }
+    @keyframes doonghua{
+      0%,100%{
+       opacity: 0;
+       transform: scale(0.3);
+      }
+      50%{
+        opacity: 1;
+        transform: scale(1);
+      }
+    }
+    .two{
+      width: 300px;
+      height:300px;
+      display: block;
+      transform: scale(0.5);
+      background-color: red;
+    
+    }
+    .spinner {
+  margin: 100px auto;
+  width: 50px;
+  height: 50px;
+  position: relative;
+}
+ 
+.container1 > div, .container2 > div, .container3 > div {
+  width: 15px;
+  height: 15px;
+  background-color: #333;
+ 
+  border-radius: 50%;
+  position: absolute;
+  -webkit-animation: bouncedelay 1.2s infinite ease-in-out;
+  animation: bouncedelay 1.2s infinite ease-in-out;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+ 
+.spinner .spinner-container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+ 
+.container2 {
+  -webkit-transform: rotateZ(45deg);
+  transform: rotateZ(45deg);
+}
+ 
+.container3 {
+  -webkit-transform: rotateZ(90deg);
+  transform: rotateZ(90deg);
+}
+ 
+.circle1 { top: 0; left: 0; }
+.circle2 { top: 0; right: 0; }
+.circle3 { right: 0; bottom: 0; }
+.circle4 { left: 0; bottom: 0; }
+ 
+.container2 .circle1 {
+  -webkit-animation-delay: -1.1s;
+  animation-delay: -1.1s;
+}
+ 
+.container3 .circle1 {
+  -webkit-animation-delay: -1.0s;
+  animation-delay: -1.0s;
+}
+ 
+.container1 .circle2 {
+  -webkit-animation-delay: -0.9s;
+  animation-delay: -0.9s;
+}
+ 
+.container2 .circle2 {
+  -webkit-animation-delay: -0.8s;
+  animation-delay: -0.8s;
+}
+ 
+.container3 .circle2 {
+  -webkit-animation-delay: -0.7s;
+  animation-delay: -0.7s;
+}
+ 
+.container1 .circle3 {
+  -webkit-animation-delay: -0.6s;
+  animation-delay: -0.6s;
+}
+ 
+.container2 .circle3 {
+  -webkit-animation-delay: -0.5s;
+  animation-delay: -0.5s;
+}
+ 
+.container3 .circle3 {
+  -webkit-animation-delay: -0.4s;
+  animation-delay: -0.4s;
+}
+ 
+.container1 .circle4 {
+  -webkit-animation-delay: -0.3s;
+  animation-delay: -0.3s;
+}
+ 
+.container2 .circle4 {
+  -webkit-animation-delay: -0.2s;
+  animation-delay: -0.2s;
+}
+ 
+.container3 .circle4 {
+  -webkit-animation-delay: -0.1s;
+  animation-delay: -0.1s;
+}
+ 
+@-webkit-keyframes bouncedelay {
+  0%, 80%, 100% { -webkit-transform: scale(0.0) }
+  40% { -webkit-transform: scale(1.0) }
+}
+ 
+@keyframes bouncedelay {
+  0%, 80%, 100% {
+    transform: scale(0.0);
+    -webkit-transform: scale(0.0);
+  } 40% {
+    transform: scale(1.0);
+    -webkit-transform: scale(1.0);
+  }
+}
+  </style>
 </head>
 <body>
-<div class="nav">
-<a href="#">体育</a><a href="#">科学</a><a href="#">教育</a><a href="#">娱乐</a><a href="#">体育</a><a href="#">科学</a><a href="#">教育</a><a href="#">娱乐</a>
+  <div class="container">
+     <div class="one1">
+          <div class="y1">
+          </div><div class="y2">
+          </div><div class="y3">
+         </div><div class="y4">
+          </div><div class="y5">
+          </div><div class="y6">
+         </div><div class="y7">
+          </div><div class="y8">
+          </div><div class="y9"></div>
+        </div>
+   </div>     
+        <div class="two"></div>
+        <div class="spinner">
+  <div class="spinner-container container1">
+    <div class="circle1"></div>
+    <div class="circle2"></div>
+    <div class="circle3"></div>
+    <div class="circle4"></div>
+  </div>
+  <div class="spinner-container container2">
+    <div class="circle1"></div>
+    <div class="circle2"></div>
+    <div class="circle3"></div>
+    <div class="circle4"></div>
+  </div>
+  <div class="spinner-container container3">
+    <div class="circle1"></div>
+    <div class="circle2"></div>
+    <div class="circle3"></div>
+    <div class="circle4"></div>
+  </div>
 </div>
 </body>
 </html>
