--- a/测试.html
+++ b/测试.html
@@ -182,7 +182,68 @@
     -webkit-transform: scale(1.0);
   }
 }
-  </style>
+.box1{
+  width: 300px;
+  height: 300px;
+ background-color: pink;
+
+margin-bottom: -50px;
+  }
+.box3{
+
+ background-color: #d8d8d8;
+overflow: hidden;
+height: 300px;
+
+}
+.box2{
+  height: 200px;
+  background-color: green;
+}
+/*.box1:after{
+  content: "";
+  display: inline-block;
+  width: 0;
+  height: 100%;
+  vertical-align: middle;
+}*/
+ 
+     .container{
+        margin:0 auto;
+        width: 100%;
+        overflow: hidden;
+    }
+    .left{
+        height: 50px;
+        width: 33.33%;
+        margin-bottom: -5000px;
+        padding-bottom: 5000px;
+        float: left;
+        background-color: rgba(33, 114, 214, 0.8);
+    }
+    .main{
+        height:100px;
+        margin-bottom: -5000px;
+        width: 33.33%;
+        float: left;
+        padding-bottom: 5000px;
+        background-color: rgba(255, 82, 0, 0.8);
+    }
+    .right{
+        width: 33.33%;
+        float: left;
+        margin-bottom: -5000px;
+        padding-bottom: 5000px;
+        background-color: rgba(90, 243, 151, 0.8)
+    }
+
+
+
+
+
+
+
+ </style>
 </head>
 <body>
   <div class="container">
@@ -219,5 +280,13 @@
     <div class="circle4"></div>
   </div>
 </div>
-</body>
+  <div class="box1">box1</div>
+    <div class="box3">box2</div>
+    <div class="box2">asdfkhdafsk</div>
+
+<div class="container">
+    <div class="left"> height:50px</div>
+    <div class="main">height:100px</div>
+    <div class="right">height:30px</div>
+</div>
 </html>
