--- a/测试.html
+++ b/测试.html
@@ -73,9 +73,9 @@
 <body>
     <div class="radio">
               
-                <input type="radio" name="" value="" placeholder=""><label class="label-1">天地盖  </label>
+                <input type="radio" name="1" value="" placeholder=""><label class="label-1">天地盖  </label>
 
-                 <input type="radio" name="" value="" placeholder=""><label class="label-1">天地盖  </label>
+                 <input type="radio" name="1" value="" placeholder=""><label class="label-1">天地盖  </label>
             
             </div>
 <div class="choice">  
