--- a/task3.html
+++ b/task3.html
@@ -6,31 +6,30 @@
 	<title>魔镜</title>
 	<style type="text/css">
 		*{
-			/*margin: 0;
-			padding: 0;*/
+			margin: 0;
+			padding: 0;
 		}
 		html{
 			font-size: 62.5%;
-		/*	-webkit-text-size-adjust:none;*/
 		}
 		body{
 			background-color: #6CCDD5;
 		}
 		.first{
-		/*	float: left;*/
-			margin-left: 5.5%;
-			padding-top: 4.3%;
-			width: 8.4%;
-			overflow: hidden;
+			display: block;
+			position: absolute;
+			top:20px;
+			left: 40px;
 		}
 		.first img{
 			max-width: 100%;
 			height: auto;
+			height: 2.7rem;
+			width: 2.7rem;
 		}
 		.header{
-
-			padding-top: 3.5%;
-			margin-left:30.8%;
+			text-align: center;
+			margin-top:5rem;
 			color: #fff;
 		}
 		.second{
@@ -38,47 +37,53 @@
 		}
 		.second img{
 			max-width: 100%;
-			height: auto;
+			height: 50px;
+			width: 50px;
 		}
 		.header .head{
 			display: inline-block;
+			text-align: center;
+			vertical-align: bottom;
 		}
 		.header .head .oneheader{
-		/*	float: left;*/
-			font-size:4.5rem;
+			font-size:30px;
 			font-family: " 黑体 ";
 			margin:0 ;
-			text-align: left;
-			
+			text-align: center;
+			font-weight: bold;
 		}
 		.header .twoheader{
-
-			font-size: 1.6rem;
+			font-size: 8px;
 			margin-top: 0;
 			color:#fff;
 			font-family: "Adobe 黑体 Std";
 		}
 		.article {
-			
-			font-family: "Hiragino Sans GB";
+			line-height: 2;
 			color: #fff;
+			margin-top:10rem;
+			margin-bottom: 8rem;
 		}
 		.article .one{
+			padding: 0 10%;
 			text-align: left;
 		}
 		.article p{
-			padding-left: 25%;
-			font-size: 3vw;
+		
+			font-size: 20px;
 		}
 
 		.leftphoto{
 		display: inline-block;
 		float: left;
+			text-align: center;
 		padding: 5%;
 		}
 		.leftphoto img{
 			max-width: 100%;
-			height: auto;
+			height: 40px;
+			width: 40px;
+
 		}
 		.leftfooter{
 			display: block;
@@ -86,15 +91,19 @@
 			text-align: center;
 			font-size: 2vw;
 			color:#fff;
+			margin-top:5px;
 		}
+
 		.rightphoto{
 		display: inline-block;
 		float: right;
 		padding: 5%;
+		text-align: center;
 		}
 		.rightphoto img{
 			width: 100%;
-			height: auto;
+			height: 40px;
+			width: 40px;
 		}
 		
 		.rightfooter{
@@ -103,24 +112,27 @@
 			text-align:center;
 			font-size: 2vw;
 			color:#fff;
+			margin-top:5px;
 		}
 	</style>
 </head>
 <body>
 	<div>
-		<span class="first"><img src="C:\Users\Administrator\Desktop\学习截图\2.png"></span> 
+		<a class="first"><img src="C:\Users\Administrator\Desktop\学习截图\2.png"></a> 
 		<div id="header" class="header">
-			<span class="second"><img src="C:\Users\Administrator\Desktop\学习截图\3.png"></span>
-			<div  class="head"><p class="oneheader">葡萄藤</p>
-			<p class="twoheader">www.ppteng.com</p>
+			<div class="header-content">
+				<span class="second"><img src="C:\Users\Administrator\Desktop\学习截图\3.png"></span>
+				<div  class="head"><p class="oneheader">葡萄藤</p>
+				<p class="twoheader">www.ppteng.com</p>
+				</div>
 			</div>
 		</div>
 		</div>
 		<div class="article"><div class="one">
-		<p>葡萄藤轻游戏专注于桌游领域，提</p>
-		<p>供在线杀人游戏，捉鬼，炸狼堡等</p>
-		<P>多种聚会游戏，以下线下聚会桌游</P>
-		<P>道具.</P></div>
+		<p>葡萄藤轻游戏专注于桌游领域，提
+		供在线杀人游戏，捉鬼，炸狼堡等
+		多种聚会游戏，以下线下聚会桌游
+		道具.</P></div>
 		</div>
 		<div class="footer">
 		<div class="leftphoto">
