--- a/task14-2.html
+++ b/task14-2.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<link rel="stylesheet"  href="http://at.alicdn.com/t/font_5tki3b4d0tivygb9.css">
-	<link rel="stylesheet" type="text/css" href="E:\webstomr\Test\sass\css1\task14-page2.css">
+	<link rel="stylesheet" type="text/css" href="css\task14-page2.css">
 	<style type="text/css">	
 	@font-face {
   font-family: 'iconfont';  /* project id 252190 */
@@ -24,8 +24,12 @@
     -webkit-text-stroke-width: 0.2px;
     -moz-osx-font-smoothing: grayscale;
 }
-	
+.main{
+	padding-bottom: 100px;
+}	
+ 	
  	</style>
+
 </head>
 <body>
 	<div class="header">
