--- a/task13-2.html
+++ b/task13-2.html
@@ -5,6 +5,7 @@
 	<title>Document</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" type="text/css" href="css\task13-2.css">
+	<script type="text/javascript" src="js\js2.js"></script>
  </head>
  <body>     
  <div class="header">
@@ -12,8 +13,8 @@
  </div> 
  <div class="main">
 <div class="top-content ">             
-<span class="top-content-text">上次游戏:&nbsp;&nbsp;&nbsp;捉鬼猜词版</span>             
-<button type="button" class="button " > <img src="photo/task7-12.png" alt="">            
+	<span class="top-content-text">上次游戏:&nbsp;&nbsp;&nbsp;捉鬼猜词版</span>
+	<button type="button" class="button " > <img src="photo/task7-12.png" alt="">
 </button>  
 </div>         
 <div class="list-group">         
@@ -22,8 +23,8 @@
 <div class="list-group-item third-list">有1133个用户正在玩此款游戏</div>
 					   
 	    <a href="##" class="list-group-item second-list-1">猜词版  </a>
-	    <button type="button" class="button-3">
-	  		<span class="glyphicon "></span>
+	    <button type="button" class="button-3" id="skip-btn" >
+	  		<span class="glyphicon"></span>
 		</button>
 	    <div class="list-group-item third-list">有1133个用户正在玩此款游戏</div>
 		<a href="##" class="list-group-item second-list-1">白痴版</a>
