--- a/js-1.html
+++ b/js-1.html
@@ -22,8 +22,8 @@
         <span class="square"></span>
         <span class="square"></span>
     </div>
-    <button type="button"  class="btn-on" id="btn1" onclick="circulate()">开始闪</button>
-    <button type="button" class="btn-off" id="btn2" onclick="resetBgcolor()">结束闪</button>
+    <button type="button"  class="btn-on" id="btn1" >开始闪</button>
+    <button type="button" class="btn-off" id="btn2" >结束闪</button>
 
 
 
