--- a/测试.html
+++ b/测试.html
@@ -6,17 +6,13 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script type="text/javascript" >
-      window.onload=function () {
-          var first = document.forms["aaa"];
-          alert(first.ee.value);
-      };
-    </script>
 </head>
 <body>
-      <button type="button" id="skip-btn"  > aaaaa </button>
-      <form name="aaa">
-        <input type="text" name="ee" value="3">11
-      </form>
+    <p class="passage" id="p">后台查看</p>
 </body>
+<script type="text/javascript">
+    var p =document.getElementById("p");
+    console.dir("p");
+</script>
 </html>
+
