--- a/js2-skip.html
+++ b/js2-skip.html
@@ -7,6 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>页面跳转</title>
         <link rel="stylesheet" type="text/css" href="css/js2-skip.css">
+        <script type="text/javascript" src="js/js2-1.js"></script>
     </head>
     <body>
         <div class="header">
@@ -22,7 +23,7 @@
             </div>
             <form class="input-container">
                 <label>
-                    请输入玩家数量<input type="text" class="input" value=""><span class="text">玩家数量为4-18</span>
+                    请输入玩家数量<input type="text" class="input"  id="input"><span class="text">玩家数量为4-18</span>
                 </label>
             </form>
             <button type="button">去发牌</button>
