--- a/js2-skip.html
+++ b/js2-skip.html
@@ -7,7 +7,6 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>页面跳转</title> 
         <link rel="stylesheet" type="text/css" href="css/js2-1.css">
-        <script type="text/javascript" src="js\js2-1.js"></script>
     </head>
     <body>
         <div class="header">
@@ -19,9 +18,7 @@
             <div class="player-install">
                 <div class="left-install">玩家配比</div>
                 <div class="right-install">
-                    <div class="player">
-                        
-                    </div>
+                    <div class="player"></div>
                     <div class="install" id="install">点击设置</div>
                 </div>
             </div>
@@ -45,7 +42,7 @@
             </div>
         </div>
         <div class="footer">
-            <button type="button">去发牌</button>
+            <button type="button" id="deal">去发牌</button>
         </div>
 
 
