--- a/测试.html
+++ b/测试.html
@@ -6,25 +6,19 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <style>
-
-        #btn{
-            width: 20px;
-            height: 20px;
-            border-radius: 50%;
-        }
-    </style>
 </head>
 <body>
-    <button id="btn">0</button>
-    <script>
-        var arr=[1,2,3,4,5,6,7,8];
-        var name ="a";
-        var btn =document.getElementById("btn");
-        btn.onclick=a;
-        function a() {
-            var bbb=window.open("test.html");
-        }
-    </script>
+
+
+
+
+<script>
+    var request =new XMLHttpRequest();
+    request.open('GET','get.php',true);
+    request.send(null);
+    request.open('POST','post.php',true);
+    request.setRequestHeader("Content-type",'application/x-www-form-urlencoded');
+    request.send('name=杨&age=19');
+</script>
 </body>
 </html>
